# HAR-CAESar

./: .gitignore  CITATION.cff  CRITICAL_REVIEW.md  README.md  generate_covid_plot.py  generate_cum_loss.py  pyproject.toml
.github/workflows/: tests.yml
code/: analyze_capital.py  analyze_crash.py  diagnose_gas.py  experiments_har_caesar.py  generate_proxy_data.py  generate_synthetic_data.py  test_caesar_run.py  test_har_caesar.py
code/models/: har_caesar.py
data/: indexes.pickle
docs/: conf.py  examples.rst  index.rst  models.rst  modules.rst  theory.rst  utils.rst
docs/_build/doctrees/: environment.pickle  examples.doctree  index.doctree  installation.doctree  models.doctree  modules.doctree  theory.doctree  utils.doctree
docs/_build/html/: .buildinfo  examples.html  genindex.html  index.html  installation.html  models.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  theory.html  utils.html
docs/_build/html/_modules/: index.html
experiments/: appendix_optimization.py  appendix_specifications.py  diagnose_gas.py  download_indexes.py  evaluation_indexes.py  experiments_har_caesar.py  experiments_indexes.py  experiments_simulation.py  experiments_stocks.py  generate_proxy_data.py  generate_synthetic_data.py
output/har_experiment/: results_theta001.pickle  results_theta0025.pickle  summary.pickle
src/har_caesar/: __init__.py  utils.py
src/har_caesar/models/: appendix_optimization.py  appendix_specification.py  caesar.py  caviar.py  gas.py  har_caesar.py  kcaviar.py
tests/: test_caesar_run.py  test_har_caesar.py
(+14 files in other folders)
